--- a/DOM/three.html
+++ b/DOM/three.html
@@ -8,4 +8,18 @@
 <body style="background-color: #212121; color: aliceblue;">
     
 </body>
+
+<script>
+    const div=document.createElement('div')
+    console.log(div);
+    div.className="main"
+    div.id=Math.round(Math.random()*10+1)
+    div.setAttribute("title","generated title")
+    div.style.backgroundColor="green"
+    div.style.padding="12px"
+    div.innerText="Chai aur code"//overwrite
+    const addText=document.createTextNode("Chai aur Code")
+    div.appendChild(addText)
+    document.body.appendChild(div)
+</script>
 </html>
